--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title> CURRICULUM_DE_AXL </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="styleP.css" rel="stylesheet">
+    <link rel="icon" href="imagenes/Milogo.ico">
 
     <style>
       .bi {
@@ -121,7 +122,7 @@
       <div class="col">
         <center>
           <!-- <div class="d-flex - align-items-center"></div> -->
-        <img src="imagenes/photo.jpg" border=10 height=200 width=200>
+        <img src="imagenes/photo1.jpg" border=10 height=200 width=200>
         <div class="b-example-divider"></div>
         <h1 class="display-4 fst-italic">Axl Cobain Fuentes Parra</h1>
         <div class="b-example-divider"></div>
