--- a/Acerca.html
+++ b/Acerca.html
@@ -100,6 +100,7 @@
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="index.html"> Curriculum <span class="sr-only">(principal)</span></a>
             <a class="nav-link active" href="contactos.html"> Contacto </a>
+            <a class="nav-link active" href="formulario.html"> Formulario </a>
           </div>
         </div>
       </div>
