--- a/contactos.html
+++ b/contactos.html
@@ -101,6 +101,7 @@
           <div class="navbar-nav">
             <a class="nav-link active" href="index.html"> Curriculum <span class="sr-only">(principal)</span></a>
             <a class="nav-link active" href="Acerca.html"> Acerca de mi </a>
+            <a class="nav-link active" href="formulario.html"> Formulario </a>
           </div>
         </div>
       </div>
