--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> CURRICULUM_DE_AXL </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href="styleP.css" rel="stylesheet">
+    <link rel="stylesheet" href="styleP.css">
     <link rel="icon" href="imagenes/Milogo.ico">
 
     <style>
@@ -46,6 +46,7 @@
           <div class="navbar-nav">
             <a class="nav-link active" href="contactos.html"> Contacto </a>
             <a class="nav-link active" href="Acerca.html"> Acerca de mi </a>
+            <a class="nav-link active" href="formulario.html"> Formulario </a>
           </div>
         </div>
       </div>
