modificacion de formulario
se cambio una prate del formulario, se espera esta sea la parte final del mismo.
solo faltaria añadir el codigo para poder mandarlo como correo o guardarlo en alguna base de datos....

--- a/Acerca.html
+++ b/Acerca.html
@@ -90,7 +90,7 @@
 
   <!-- barra de navegacion -->
   <header data-bs-theme="dark">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand">Acerca de mi</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -170,7 +170,7 @@
         <path fill-rule="evenodd" d="M2.146 2.146a.5.5 0 0 0 0 .708l11 11a.5.5 0 0 0 .708-.708l-11-11a.5.5 0 0 0-.708 0Z"/>
       </symbol>
     </svg>
-
+<br><br>
       <div class="container"></div>
         <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
           <div class="carousel-indicators">
