--- a/formulario.html
+++ b/formulario.html
@@ -181,7 +181,7 @@
         <p class="opacity-75">Recuerda que los campos marcados con (*) son obligatorios, verifica que esten contestados correctamente.</p>
         <p class="opacity-75">Completa el siguiente formulario:</p>
 
-        <form class="row g-3 mt-2 needs-validation" novalidate netlify>
+        <form name="formulario_interesado" class="row g-3 mt-2 needs-validation" novalidate netlify>
             <div class="col">
     <!-- area de correo electronico -->
                 <div class="col-12 mb-2">
@@ -286,7 +286,7 @@
     <!-- area de texto largo -->
                 <div class="mb-3">
                     <label for="Textarea1" class="form-label">Algo que te gustaria agregar.</label>
-                    <textarea class="form-control" id="Textarea1" rows="3"></textarea>
+                    <textarea class="form-control" name="agregar" id="Textarea1" rows="3"></textarea>
                 </div><br>
     <!-- area de envio -->
                 <div class="text-center">
