--- a/formulario.html
+++ b/formulario.html
@@ -216,23 +216,23 @@
                 </div><br><br>
     <!-- area de radio -->
                 <div class="col-6 mb-2">
-                  <label for="radio" class="from-check-label">Selecciona el sexo. *</label>
-                <div class="from-check ">
-                    <input type="radio" name="sexo" class="form-check-input" value="" id="radio1" required>
+                  <label for="radio" name="Sexo" class="from-check-label">Selecciona el sexo. *</label>
+                  <div class="from-check ">
+                    <input type="radio" name="Hombre" class="form-check-input" value="" id="radio1" required>
                     <label for="radio1" class="from-check-label">Hombre</label>
-                </div>
-                <div class="from-check ">
-                    <input type="radio" name="sexo" class="form-check-input" value="" id="radio2" required>
+                  </div>
+                  <div class="from-check ">
+                    <input type="radio" name="Mujer" class="form-check-input" value="" id="radio2" required>
                     <label for="radio2" class="from-check-label">Mujer</label>
-                </div>
-                <div class="from-check ">
-                    <input type="radio" name="sexo" class="form-check-input" value="" id="radio3" required>
+                  </div>
+                  <div class="from-check ">
+                    <input type="radio" name="Otro" class="form-check-input" value="" id="radio3" required>
                     <label for="radio3" class="from-check-label">Otro</label>
-                </div>
-                <div class="from-check ">
-                    <input type="radio" name="sexo" class="form-check-input" value="" id="radio4" required>
+                  </div>
+                  <div class="from-check ">
+                    <input type="radio" name="Prefiero no decirlo" class="form-check-input" value="" id="radio4" required>
                     <label for="radio4" class="from-check-label">Prefiero no decirlo</label>
-                </div>
+                  </div>
                 </div><br>
               <hr class="featurette-divider">
     <!--segunda seccion de formulario-->
@@ -271,7 +271,7 @@
 
                 <div class="col-4 form-check-inline"><!-- area del calendario -->
                   <label for="fechaactual1" class="form-label">Fecha de visita. *</label>
-                  <input type="date" class="form-control" id="fechaacutal1" required>
+                  <input type="date" name="fecha de llenado" class="form-control" id="fechaacutal1" required>
                 </div>
 
                 <div class="col-12">
