--- a/formulario.html
+++ b/formulario.html
@@ -218,19 +218,19 @@
                 <div class="col-6 mb-2">
                   <label for="radio" name="Sexo" class="from-check-label">Selecciona el sexo. *</label>
                   <div class="from-check ">
-                    <input type="radio" name="Hombre" class="form-check-input" value="" id="radio1" required>
+                    <input type="radio" name="Sexo" class="form-check-input" value="" id="radio1" required>
                     <label for="radio1" class="from-check-label">Hombre</label>
                   </div>
                   <div class="from-check ">
-                    <input type="radio" name="Mujer" class="form-check-input" value="" id="radio2" required>
+                    <input type="radio" name="Sexo" class="form-check-input" value="" id="radio2" required>
                     <label for="radio2" class="from-check-label">Mujer</label>
                   </div>
                   <div class="from-check ">
-                    <input type="radio" name="Otro" class="form-check-input" value="" id="radio3" required>
+                    <input type="radio" name="Sexo" class="form-check-input" value="" id="radio3" required>
                     <label for="radio3" class="from-check-label">Otro</label>
                   </div>
                   <div class="from-check ">
-                    <input type="radio" name="Prefiero no decirlo" class="form-check-input" value="" id="radio4" required>
+                    <input type="radio" name="Sexo" class="form-check-input" value="" id="radio4" required>
                     <label for="radio4" class="from-check-label">Prefiero no decirlo</label>
                   </div>
                 </div><br>
