--- a/Acerca.html
+++ b/Acerca.html
@@ -92,7 +92,9 @@
   <header data-bs-theme="dark">
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand">Acerca de mi</a>
+        <div class="logo">
+          <img src="imagenes/LogoAXL.png" class="bd-placeholder-img rounded-circle img-fluid" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
+        </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
